# HollowLog

./: CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
include/HollowLog/: HollowLog.h
